# gliner-rs-php

./: AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  gliner_stubs.php
.github/workflows/: release.yml
docker/: test.php
prompts/: initial_prompt.md
src/: lib.rs  main.rs
