[package]
name = "gliner-rs-php"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ext-php-rs = { version = "0.15.5", features = ["anyhow"] }
gline-rs = "1.0.1"
orp = "0.9.0"

[dev-dependencies]
ext-php-rs = { version = "0.15.5", features = ["anyhow", "embed"] }
